--- a/project/res/values-es-rMX/strings.xml
+++ b/project/res/values-es-rMX/strings.xml
@@ -12,8 +12,8 @@
     <string name="fly_from_TEMPLATE">Vuelo procedente de %1$s</string>
     <!-- Fly from… -->
     <string name="Fly_from_dot_dot_dot">Vuelo procedente de…</string>
-    <!-- Choose flight dates -->
-    <string name="choose_flight_dates">Elige las fechas del vuelo</string>
+    <!-- Select dates - used for the Calendar. Must be "proper case" -->
+    <string name="select_dates_proper_case">Seleccionar fechas</string>
     <!-- Choose dates. Used in tablet calendar, when flights are not supported for certain POS -->
     <string name="choose_dates">Elige las fechas</string>
     <!-- Hotels Tonight -->
@@ -24,6 +24,8 @@
     <string name="missing_flight_trip_date_message">Selecciona una fecha o un rango de fechas válidos.</string>
     <!-- Message for no GDE results, or GDE not available on this POS -->
     <string name="Set_dates_for_flights_to_X_TEMPLATE">Selecciona las fechas para los \nvuelos a %s</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
+    <string name="flight_trends_missing_origin">Para conocer las tendencias de precios de los vuelos,\nindícanos el origen de tu vuelo.</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">El viaje comienza el</string>
     <!-- Denotes the end date of the trip -->
@@ -94,6 +96,15 @@
         <item quantity="many">%s vuelos</item>
         <item quantity="other">%s vuelos</item>
     </plurals>
+    <!-- Pluralization for Number of Return Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Return_Flights_TEMPLATE">
+        <item quantity="zero">%s vuelos de regreso</item>
+        <item quantity="one">%s vuelo de regreso</item>
+        <item quantity="two">%s vuelos de regreso</item>
+        <item quantity="few">%s vuelos de regreso</item>
+        <item quantity="many">%s vuelos de regreso</item>
+        <item quantity="other">%s vuelos de regreso</item>
+    </plurals>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Tu viaje está vacío.</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -112,6 +123,8 @@
     <string name="loading_hotels_and_flights">Cargando hoteles y vuelos…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">Cuándo volar</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="flight_trends">Tendencias de vuelos</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">Cuándo regresar</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
@@ -975,8 +988,6 @@
         <item quantity="many">%s días</item>
         <item quantity="other">%s días</item>
     </plurals>
-    <!-- Message shown to user when data has expired and we need to send them back to the start of the app -->
-    <string name="error_data_expired">DEBUG: los datos de búsqueda desaparecieron de alguna manera.  Favor de reportar este error a DLew.</string>
     <!-- Select a flight to (city name) -->
     <string name="select_a_flight_to_TEMPLATE">Seleccionar un vuelo a %1$s</string>
     <!-- Select a flight back to (city name) -->
@@ -1829,13 +1840,13 @@
 
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
-    <string name="vip_access">VIP Access</string>
+    <string name="vip_access">+VIP Access</string>
     <!-- Message that explains the meaning of VIP Access -->
-    <string name="vip_access_message">En los hoteles VIP Access, los socios de Elite Plus reciben ascensos de categoría de habitación gratuitos, así como otros beneficios, según disponibilidad, al hacer el check-in.</string>
+    <string name="vip_access_message">En los hoteles +VIP Access, los socios +silver y +gold reciben ascensos de categoría de habitación gratuitos, así como otros beneficios, según disponibilidad, al hacer el check-in.</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="filter_vip_access">Solo hoteles VIP Access</string>
+    <string name="filter_vip_access">Solo hoteles +VIP Access</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="VIP_Access_Only">Solo VIP Access</string>
+    <string name="VIP_Access_Only">Solo +VIP Access</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">ENCENDIDO</string>
     <string name="switch_off">APAGADO</string>
