--- a/project/res/values-fr-rCA/strings.xml
+++ b/project/res/values-fr-rCA/strings.xml
@@ -12,8 +12,8 @@
     <string name="fly_from_TEMPLATE">Prendre un vol à %1$s</string>
     <!-- Fly from… -->
     <string name="Fly_from_dot_dot_dot">Vol de…</string>
-    <!-- Choose flight dates -->
-    <string name="choose_flight_dates">Choisir les dates de vol</string>
+    <!-- Select dates - used for the Calendar. Must be "proper case" -->
+    <string name="select_dates_proper_case">Sélectionner les dates</string>
     <!-- Choose dates. Used in tablet calendar, when flights are not supported for certain POS -->
     <string name="choose_dates">Choisir les dates</string>
     <!-- Hotels Tonight -->
@@ -24,6 +24,8 @@
     <string name="missing_flight_trip_date_message">Veuillez sélectionner une date ou une plage de dates valide.</string>
     <!-- Message for no GDE results, or GDE not available on this POS -->
     <string name="Set_dates_for_flights_to_X_TEMPLATE">Veuillez sélectionner les dates des\nvols vers %s</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
+    <string name="flight_trends_missing_origin">Pour connaître les tendances dans les prix des vols,\ndites-nous de quel endroit vous partez.</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">Le voyage commence</string>
     <!-- Denotes the end date of the trip -->
@@ -55,7 +57,7 @@
     <!-- Resulsts label -->
     <string name="results">Résultats</string>
     <!-- Sort & Filter label -->
-    <string name="Sort_and_Filter">Trier &amp; filtrer</string>
+    <string name="Sort_and_Filter">Trier et filtrer</string>
     <!-- "Done" list header label -->
     <string name="Done">Terminé</string>
     <!-- Pluralization for Number of Hotels returned from a search TEMPLATE e.g. "25 Hotels" -->
@@ -94,6 +96,15 @@
         <item quantity="many">%s vols</item>
         <item quantity="other">%s vols</item>
     </plurals>
+    <!-- Pluralization for Number of Return Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Return_Flights_TEMPLATE">
+        <item quantity="zero">%s vols de retour</item>
+        <item quantity="one">%s vol de retour</item>
+        <item quantity="two">%s vols de retour</item>
+        <item quantity="few">%s vols de retour</item>
+        <item quantity="many">%s vols de retour</item>
+        <item quantity="other">%s vols de retour</item>
+    </plurals>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Votre voyage est vide.</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -112,6 +123,8 @@
     <string name="loading_hotels_and_flights">Chargement des hôtels et des vols…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">Quand voler</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="flight_trends">Tendances dans les vols</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">Quand revenir</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
@@ -975,8 +988,6 @@
         <item quantity="many">%s jours</item>
         <item quantity="other">%s jours</item>
     </plurals>
-    <!-- Message shown to user when data has expired and we need to send them back to the start of the app -->
-    <string name="error_data_expired">DÉBOGAGE : La recherche de données a été effacée. Veuillez signaler cette erreur à DLew.</string>
     <!-- Select a flight to (city name) -->
     <string name="select_a_flight_to_TEMPLATE">Sélectionnez un vol vers %1$s</string>
     <!-- Select a flight back to (city name) -->
@@ -1829,13 +1840,13 @@
 
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
-    <string name="vip_access">Accès VIP</string>
+    <string name="vip_access">+VIP Access</string>
     <!-- Message that explains the meaning of VIP Access -->
-    <string name="vip_access_message">Les hôtels Accès VIP offrent le surclassement sans frais en catégorie supérieure aux membres Élite Plus, ainsi que de nombreux autres avantages, selon disponibilité à l\&apos;arrivée.</string>
+    <string name="vip_access_message">Les hôtels +VIP Access offrent le surclassement sans frais en catégorie supérieure aux membres +silver et +gold ainsi que de nombreux autres avantages, selon disponibilité à l\&apos;arrivée.</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="filter_vip_access">Seulement les hôtels Accès VIP</string>
+    <string name="filter_vip_access">Seulement les hôtels +VIP Access</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="VIP_Access_Only">VIP Access seulement</string>
+    <string name="VIP_Access_Only">+VIP Access seulement</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">Activé</string>
     <string name="switch_off">Désactivé</string>
