--- a/project/res/values-in/strings.xml
+++ b/project/res/values-in/strings.xml
@@ -12,8 +12,8 @@
     <string name="fly_from_TEMPLATE">Penerbangan dari %1$s</string>
     <!-- Fly from… -->
     <string name="Fly_from_dot_dot_dot">Penerbangan dari…</string>
-    <!-- Choose flight dates -->
-    <string name="choose_flight_dates">Pilih tanggal penerbangan</string>
+    <!-- Select dates - used for the Calendar. Must be "proper case" -->
+    <string name="select_dates_proper_case">Pilih tanggal</string>
     <!-- Choose dates. Used in tablet calendar, when flights are not supported for certain POS -->
     <string name="choose_dates">Pilih Tanggal</string>
     <!-- Hotels Tonight -->
@@ -24,6 +24,8 @@
     <string name="missing_flight_trip_date_message">Harap pilih tanggal yang valid.</string>
     <!-- Message for no GDE results, or GDE not available on this POS -->
     <string name="Set_dates_for_flights_to_X_TEMPLATE">Pilih tanggal penerbangan untuk\npenerbangan ke %s</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
+    <string name="flight_trends_missing_origin">Untuk melihat tren harga tiket, \nsilakan beritahu kami dari mana Anda terbang.</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">Perjalanan dimulai</string>
     <!-- Denotes the end date of the trip -->
@@ -94,6 +96,15 @@
         <item quantity="many">%s Penerbangan</item>
         <item quantity="other">%s Penerbangan</item>
     </plurals>
+    <!-- Pluralization for Number of Return Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Return_Flights_TEMPLATE">
+        <item quantity="zero">%s Penerbangan Kembali</item>
+        <item quantity="one">%s Penerbangan Kembali</item>
+        <item quantity="two">%s Penerbangan Kembali</item>
+        <item quantity="few">%s Penerbangan Kembali</item>
+        <item quantity="many">%s Penerbangan Kembali</item>
+        <item quantity="other">%s Penerbangan Kembali</item>
+    </plurals>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Perjalanan Anda kosong.</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -112,8 +123,10 @@
     <string name="loading_hotels_and_flights">Memuat Hotel dan Penerbangan…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">Waktu Penerbangan</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="flight_trends">Tren Harga Tiket</string>
     <!-- Flight fare calendar header for return flights -->
-    <string name="when_to_return">Waktu Kembali</string>
+    <string name="when_to_return">Waktu kembali</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
     <string name="waypoint_suggestion_fail">Informasi lokasi tidak ditemukan! Ubah pencarian, lalu coba lagi.</string>
     <!-- Tablet search results, no hotels available -->
@@ -975,8 +988,6 @@
         <item quantity="many">%s hari</item>
         <item quantity="other">%s hari</item>
     </plurals>
-    <!-- Message shown to user when data has expired and we need to send them back to the start of the app -->
-    <string name="error_data_expired">DEBUG: Data pencarian hilang tanpa sebab.  Please report this error to DLew.</string>
     <!-- Select a flight to (city name) -->
     <string name="select_a_flight_to_TEMPLATE">Pilih penerbangan ke %1$s</string>
     <!-- Select a flight back to (city name) -->
@@ -1829,13 +1840,13 @@
 
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
-    <string name="vip_access">VIP Access</string>
+    <string name="vip_access">+VIP Access</string>
     <!-- Message that explains the meaning of VIP Access -->
-    <string name="vip_access_message">Di hotel VIP Access, anggota Expedia Elite Plus dapat menerima upgrade kamar gratis dan tambahan lainnya tergantung ketersediaan pada saat check-in.</string>
+    <string name="vip_access_message">Di hotel-hotel +VIP Access, para member +silver dan +gold bisa menerima upgrade kamar gratis dan keuntungan lainnya yang tersedia pada saat check-in.</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="filter_vip_access">Hanya hotel VIP Access</string>
+    <string name="filter_vip_access">Hanya Hotel +VIP Access</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="VIP_Access_Only">Hanya VIP Access</string>
+    <string name="VIP_Access_Only">+VIP Access Saja</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">AKTIF</string>
     <string name="switch_off">TIDAK AKTIF</string>
