--- a/project/res/values-ko/strings.xml
+++ b/project/res/values-ko/strings.xml
@@ -12,8 +12,8 @@
     <string name="fly_from_TEMPLATE">%1$s발 항공편</string>
     <!-- Fly from… -->
     <string name="Fly_from_dot_dot_dot">출발지…</string>
-    <!-- Choose flight dates -->
-    <string name="choose_flight_dates">항공편 날짜 선택</string>
+    <!-- Select dates - used for the Calendar. Must be "proper case" -->
+    <string name="select_dates_proper_case">날짜 선택</string>
     <!-- Choose dates. Used in tablet calendar, when flights are not supported for certain POS -->
     <string name="choose_dates">날짜 선택</string>
     <!-- Hotels Tonight -->
@@ -24,6 +24,8 @@
     <string name="missing_flight_trip_date_message">날짜 또는 날짜 범위를 올바르게 선택해 주세요.</string>
     <!-- Message for no GDE results, or GDE not available on this POS -->
     <string name="Set_dates_for_flights_to_X_TEMPLATE">%s행 항공편의 날짜를\n선택해 주세요.</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
+    <string name="flight_trends_missing_origin">항공 요금 추세를 보려면\n어디서 출발하는지 알려주세요.</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">여행 시작</string>
     <!-- Denotes the end date of the trip -->
@@ -94,6 +96,15 @@
         <item quantity="many">%s개 항공편</item>
         <item quantity="other">%s개 항공편</item>
     </plurals>
+    <!-- Pluralization for Number of Return Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Return_Flights_TEMPLATE">
+        <item quantity="zero">%s개 귀국 항공편</item>
+        <item quantity="one">%s개 귀국 항공편</item>
+        <item quantity="two">%s개 귀국 항공편</item>
+        <item quantity="few">%s개 귀국 항공편</item>
+        <item quantity="many">%s개 귀국 항공편</item>
+        <item quantity="other">%s개 귀국 항공편</item>
+    </plurals>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">고객님의 여행이 비어 있습니다.</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -112,6 +123,8 @@
     <string name="loading_hotels_and_flights">호텔 및 항공 로드 중…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">떠나는 날짜</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="flight_trends">항공 추세</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">돌아오는 날짜</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
@@ -975,8 +988,6 @@
         <item quantity="many">%s일</item>
         <item quantity="other">%s일</item>
     </plurals>
-    <!-- Message shown to user when data has expired and we need to send them back to the start of the app -->
-    <string name="error_data_expired">디버그: 검색 데이터가 삭제되었습니다. 이 오류를 DLew에게 보고해 주시기 바랍니다.</string>
     <!-- Select a flight to (city name) -->
     <string name="select_a_flight_to_TEMPLATE">%1$s행 항공편을 선택하세요.</string>
     <!-- Select a flight back to (city name) -->
@@ -1829,13 +1840,13 @@
 
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
-    <string name="vip_access">VIP Access</string>
+    <string name="vip_access">+VIP Access</string>
     <!-- Message that explains the meaning of VIP Access -->
-    <string name="vip_access_message">VIP Access 호텔에서 Expedia Elite Plus 회원은 체크인 시 이용 가능한 경우 무료 객실 업그레이드와 기타 특전을 받으시게 됩니다.</string>
+    <string name="vip_access_message">+VIP Access 호텔에서 +silver 및 +gold 회원은 체크인 시 이용 가능한 경우 무료 객실 업그레이드와 기타 특전을 받으시게 됩니다.</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="filter_vip_access">VIP Access 호텔만</string>
+    <string name="filter_vip_access">+VIP Access 호텔만</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="VIP_Access_Only">VIP Access 전용</string>
+    <string name="VIP_Access_Only">+VIP Access 전용</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">켜기</string>
     <string name="switch_off">끄기</string>
