--- a/project/res/values-nl/strings.xml
+++ b/project/res/values-nl/strings.xml
@@ -12,8 +12,8 @@
     <string name="fly_from_TEMPLATE">Vlieg vanaf %1$s</string>
     <!-- Fly from… -->
     <string name="Fly_from_dot_dot_dot">Vlieg vanaf…</string>
-    <!-- Choose flight dates -->
-    <string name="choose_flight_dates">Kies je vluchtdatums</string>
+    <!-- Select dates - used for the Calendar. Must be "proper case" -->
+    <string name="select_dates_proper_case">Datums selecteren</string>
     <!-- Choose dates. Used in tablet calendar, when flights are not supported for certain POS -->
     <string name="choose_dates">Datums kiezen</string>
     <!-- Hotels Tonight -->
@@ -24,6 +24,8 @@
     <string name="missing_flight_trip_date_message">Kies een geldige datum of periode.</string>
     <!-- Message for no GDE results, or GDE not available on this POS -->
     <string name="Set_dates_for_flights_to_X_TEMPLATE">Kies datums voor\nvluchten naar %s</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
+    <string name="flight_trends_missing_origin">Vertel ons vanaf waar je vliegt\nzodat we vluchtprijstrends kunnen ophalen</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">Begindatum reis</string>
     <!-- Denotes the end date of the trip -->
@@ -94,6 +96,15 @@
         <item quantity="many">%s vluchten</item>
         <item quantity="other">%s vluchten</item>
     </plurals>
+    <!-- Pluralization for Number of Return Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Return_Flights_TEMPLATE">
+        <item quantity="zero">%s terugvluchten</item>
+        <item quantity="one">%s terugvlucht</item>
+        <item quantity="two">%s terugvluchten</item>
+        <item quantity="few">%s terugvluchten</item>
+        <item quantity="many">%s terugvluchten</item>
+        <item quantity="other">%s terugvluchten</item>
+    </plurals>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Je reis is leeg.</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -112,6 +123,8 @@
     <string name="loading_hotels_and_flights">Hotels en vluchten aan het laden …</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">Vluchtdatums</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="flight_trends">Vluchttrends</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">Terugvluchten</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
@@ -975,8 +988,6 @@
         <item quantity="many">%s dagen</item>
         <item quantity="other">%s dagen</item>
     </plurals>
-    <!-- Message shown to user when data has expired and we need to send them back to the start of the app -->
-    <string name="error_data_expired">DEBUG: zoekgegevens zijn gewist.  Meld deze fout bij DLew.</string>
     <!-- Select a flight to (city name) -->
     <string name="select_a_flight_to_TEMPLATE">Kies een vlucht naar %1$s</string>
     <!-- Select a flight back to (city name) -->
@@ -1829,13 +1840,13 @@
 
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
-    <string name="vip_access">VIP Access</string>
+    <string name="vip_access">+VIP Access</string>
     <!-- Message that explains the meaning of VIP Access -->
-    <string name="vip_access_message">Expedia Elite Plus-leden genieten bij check-in in VIP Access hotels van gratis kamerupgrades en ander extraatjes, indien beschikbaar.</string>
+    <string name="vip_access_message">Bij +VIP Access hotels genieten +silver en +gold-leden bij check-in van gratis kamerupgrades en andere extraatjes, indien beschikbaar.</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="filter_vip_access">Alleen VIP Access hotels</string>
+    <string name="filter_vip_access">Alleen +VIP Access hotels</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="VIP_Access_Only">Alleen VIP-toegang</string>
+    <string name="VIP_Access_Only">Alleen +VIP Access</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">AAN</string>
     <string name="switch_off">UIT</string>
