--- a/project/res/values-sv/strings.xml
+++ b/project/res/values-sv/strings.xml
@@ -12,8 +12,8 @@
     <string name="fly_from_TEMPLATE">Flyg från %1$s</string>
     <!-- Fly from… -->
     <string name="Fly_from_dot_dot_dot">Flyg från…</string>
-    <!-- Choose flight dates -->
-    <string name="choose_flight_dates">Välj flygdatum</string>
+    <!-- Select dates - used for the Calendar. Must be "proper case" -->
+    <string name="select_dates_proper_case">Välj datum</string>
     <!-- Choose dates. Used in tablet calendar, when flights are not supported for certain POS -->
     <string name="choose_dates">Välj datum</string>
     <!-- Hotels Tonight -->
@@ -24,6 +24,8 @@
     <string name="missing_flight_trip_date_message">Välj ett giltigt datum eller datumintervall.</string>
     <!-- Message for no GDE results, or GDE not available on this POS -->
     <string name="Set_dates_for_flights_to_X_TEMPLATE">Välj datum för\nflyg till %s</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
+    <string name="flight_trends_missing_origin">Ange var du reser ifrån\nför att se flygpristrender.</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">Resan startar</string>
     <!-- Denotes the end date of the trip -->
@@ -94,6 +96,15 @@
         <item quantity="many">%s flyg</item>
         <item quantity="other">%s flyg</item>
     </plurals>
+    <!-- Pluralization for Number of Return Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Return_Flights_TEMPLATE">
+        <item quantity="zero">%s returflyg</item>
+        <item quantity="one">%s returflyg</item>
+        <item quantity="two">%s returflyg</item>
+        <item quantity="few">%s returflyg</item>
+        <item quantity="many">%s returflyg</item>
+        <item quantity="other">%s returflyg</item>
+    </plurals>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Din resa är tom.</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -112,6 +123,8 @@
     <string name="loading_hotels_and_flights">Hämtar flyg och hotell…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">Avresa</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="flight_trends">Flygtrender</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">Hemresa</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
@@ -975,8 +988,6 @@
         <item quantity="many">%s dagar</item>
         <item quantity="other">%s dagar</item>
     </plurals>
-    <!-- Message shown to user when data has expired and we need to send them back to the start of the app -->
-    <string name="error_data_expired">DEBUG: Sökuppgifter rensades.  Rapportera felet till DLew.</string>
     <!-- Select a flight to (city name) -->
     <string name="select_a_flight_to_TEMPLATE">Välj ett flyg till %1$s</string>
     <!-- Select a flight back to (city name) -->
@@ -1829,13 +1840,13 @@
 
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
-    <string name="vip_access">VIP Access</string>
+    <string name="vip_access">+VIP Access</string>
     <!-- Message that explains the meaning of VIP Access -->
-    <string name="vip_access_message">På hotell med VIP Access får Expedia Elite Plus-medlemmar gratis rumsuppgraderingar och andra förmåner som är tillgängliga vid incheckning.</string>
+    <string name="vip_access_message">På hotell med +VIP Access får +silver- and +gold-medlemmar gratis rumsuppgraderingar och andra förmåner som är tillgängliga vid incheckning.</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="filter_vip_access">Endast hotell med VIP Access</string>
+    <string name="filter_vip_access">Endast hotell med +VIP Access</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="VIP_Access_Only">Endast VIP-tillgång</string>
+    <string name="VIP_Access_Only">Endast +VIP Access</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">AV</string>
     <string name="switch_off">PÅ</string>
