--- a/project/res/values-zh-rHK/strings.xml
+++ b/project/res/values-zh-rHK/strings.xml
@@ -12,8 +12,8 @@
     <string name="fly_from_TEMPLATE">由%1$s起飛</string>
     <!-- Fly from… -->
     <string name="Fly_from_dot_dot_dot">出發地…</string>
-    <!-- Choose flight dates -->
-    <string name="choose_flight_dates">選擇機票日期</string>
+    <!-- Select dates - used for the Calendar. Must be "proper case" -->
+    <string name="select_dates_proper_case">選擇日期</string>
     <!-- Choose dates. Used in tablet calendar, when flights are not supported for certain POS -->
     <string name="choose_dates">選擇日期</string>
     <!-- Hotels Tonight -->
@@ -24,6 +24,8 @@
     <string name="missing_flight_trip_date_message">請選擇有效的日期或日期範圍。</string>
     <!-- Message for no GDE results, or GDE not available on this POS -->
     <string name="Set_dates_for_flights_to_X_TEMPLATE">請選擇\n前往%s航班的日期</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
+    <string name="flight_trends_missing_origin">如需查閱機票價格趨勢，\n請先輸入您的出發地。</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">行程開始日期</string>
     <!-- Denotes the end date of the trip -->
@@ -94,6 +96,15 @@
         <item quantity="many">%s 個航班</item>
         <item quantity="other">%s 個航班</item>
     </plurals>
+    <!-- Pluralization for Number of Return Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Return_Flights_TEMPLATE">
+        <item quantity="zero">%s 個回程航班</item>
+        <item quantity="one">%s 個回程航班</item>
+        <item quantity="two">%s 個回程航班</item>
+        <item quantity="few">%s 個回程航班</item>
+        <item quantity="many">%s 個回程航班</item>
+        <item quantity="other">%s 個回程航班</item>
+    </plurals>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">您的行程留空了。</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -112,6 +123,8 @@
     <string name="loading_hotels_and_flights">正載入酒店和機票…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">出發日期</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="flight_trends">機票價格趨勢</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">回程日期</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
@@ -975,8 +988,6 @@
         <item quantity="many">%s 日</item>
         <item quantity="other">%s 日</item>
     </plurals>
-    <!-- Message shown to user when data has expired and we need to send them back to the start of the app -->
-    <string name="error_data_expired">調試：搜尋資料不知何故已被清除。請向 DLew 報告此錯誤。</string>
     <!-- Select a flight to (city name) -->
     <string name="select_a_flight_to_TEMPLATE">選擇前往%1$s的航班</string>
     <!-- Select a flight back to (city name) -->
@@ -1829,13 +1840,13 @@
 
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
-    <string name="vip_access">VIP Access</string>
+    <string name="vip_access">+VIP Access</string>
     <!-- Message that explains the meaning of VIP Access -->
-    <string name="vip_access_message">於 VIP Access 酒店，Expedia Elite Plus 會員可視乎入住時的供應情況而享有免費客房升級和其他優惠。</string>
+    <string name="vip_access_message">於 +VIP Access 酒店，+silver 及 +gold 會員可視乎入住時的供應情況而享有免費客房升級及其他優惠。</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="filter_vip_access">只查看 VIP Access 酒店</string>
+    <string name="filter_vip_access">只查看 +VIP Access 酒店</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="VIP_Access_Only">只查看 VIP Access</string>
+    <string name="VIP_Access_Only">只查看 +VIP Access</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">於</string>
     <string name="switch_off">折扣</string>
