--- a/project/res/values-nb/strings.xml
+++ b/project/res/values-nb/strings.xml
@@ -12,8 +12,8 @@
     <string name="fly_from_TEMPLATE">Fly fra %1$s</string>
     <!-- Fly from… -->
     <string name="Fly_from_dot_dot_dot">Fly fra…</string>
-    <!-- Choose flight dates -->
-    <string name="choose_flight_dates">Velg flydatoer</string>
+    <!-- Select dates - used for the Calendar. Must be "proper case" -->
+    <string name="select_dates_proper_case">Velg datoer</string>
     <!-- Choose dates. Used in tablet calendar, when flights are not supported for certain POS -->
     <string name="choose_dates">Velg datoer</string>
     <!-- Hotels Tonight -->
@@ -24,6 +24,8 @@
     <string name="missing_flight_trip_date_message">Velg en gyldig dato eller tidsperiode.</string>
     <!-- Message for no GDE results, or GDE not available on this POS -->
     <string name="Set_dates_for_flights_to_X_TEMPLATE">Velg datoer for \nflyvningene til %s</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
+    <string name="flight_trends_missing_origin">Fortell oss hvor du vil fly fra\nfor å se flypris-trender</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">Turen begynner</string>
     <!-- Denotes the end date of the trip -->
@@ -94,6 +96,15 @@
         <item quantity="many">%s flyvninger</item>
         <item quantity="other">%s flyvninger</item>
     </plurals>
+    <!-- Pluralization for Number of Return Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Return_Flights_TEMPLATE">
+        <item quantity="zero">%s returflyvninger</item>
+        <item quantity="one">%s returflyvning</item>
+        <item quantity="two">%s returflyvninger</item>
+        <item quantity="few">%s returflyvninger</item>
+        <item quantity="many">%s returflyvninger</item>
+        <item quantity="other">%s returflyvninger</item>
+    </plurals>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Reisen er tom.</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -112,8 +123,10 @@
     <string name="loading_hotels_and_flights">Henter hotell og flyvninger…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">Når skal du fly?</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="flight_trends">Flypris-trender</string>
     <!-- Flight fare calendar header for return flights -->
-    <string name="when_to_return">Når skal du tilbake?</string>
+    <string name="when_to_return">Når skal du fly tilbake?</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
     <string name="waypoint_suggestion_fail">Informasjon om sted ble ikke funnet. Endre søket ditt og prøv på nytt.</string>
     <!-- Tablet search results, no hotels available -->
@@ -975,8 +988,6 @@
         <item quantity="many">%s dager</item>
         <item quantity="other">%s dager</item>
     </plurals>
-    <!-- Message shown to user when data has expired and we need to send them back to the start of the app -->
-    <string name="error_data_expired">DEBUG: Søkedata ble klarert.  Vennligst rapporter denne feilen til DLew.</string>
     <!-- Select a flight to (city name) -->
     <string name="select_a_flight_to_TEMPLATE">Velg en flyvning til %1$s</string>
     <!-- Select a flight back to (city name) -->
@@ -1829,13 +1840,13 @@
 
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
-    <string name="vip_access">VIP Access</string>
+    <string name="vip_access">+VIP Access</string>
     <!-- Message that explains the meaning of VIP Access -->
-    <string name="vip_access_message">Ved VIP Access-hotellene får Expedia Elite Plus-medlemmer kostnadsfrie romoppgraderinger og andre fordeler ved innsjekking (avhenger av tilgjengelighet).</string>
+    <string name="vip_access_message">Ved +VIP Access-hotellene får +silver og + gold-medlemmer kostnadsfrie romoppgraderinger og andre fordeler ved innsjekking (avhenger av tilgjengelighet).</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="filter_vip_access">Kun VIP Access-hoteller</string>
+    <string name="filter_vip_access">Kun +VIP Access-hoteller</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="VIP_Access_Only">Kun VIP Access</string>
+    <string name="VIP_Access_Only">Kun +VIP Access</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">PÅ</string>
     <string name="switch_off">RABATT</string>
