--- a/project/res/values-pt/strings.xml
+++ b/project/res/values-pt/strings.xml
@@ -12,8 +12,8 @@
     <string name="fly_from_TEMPLATE">Voar de %1$s</string>
     <!-- Fly from… -->
     <string name="Fly_from_dot_dot_dot">Voo de…</string>
-    <!-- Choose flight dates -->
-    <string name="choose_flight_dates">Escolha as datas do voo</string>
+    <!-- Select dates - used for the Calendar. Must be "proper case" -->
+    <string name="select_dates_proper_case">Selecione as datas</string>
     <!-- Choose dates. Used in tablet calendar, when flights are not supported for certain POS -->
     <string name="choose_dates">Selecione as datas</string>
     <!-- Hotels Tonight -->
@@ -24,6 +24,8 @@
     <string name="missing_flight_trip_date_message">Selecione uma data ou intervalo de datas válido.</string>
     <!-- Message for no GDE results, or GDE not available on this POS -->
     <string name="Set_dates_for_flights_to_X_TEMPLATE">Selecione as datas dos\nvoos para %s</string>
+    <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
+    <string name="flight_trends_missing_origin">Para flutuação de tarifa,\ndiga de onde está partindo.</string>
     <!-- Denotes the start date of the trip -->
     <string name="trip_starts">A viagem começa</string>
     <!-- Denotes the end date of the trip -->
@@ -94,6 +96,15 @@
         <item quantity="many">%s voos</item>
         <item quantity="other">%s voos</item>
     </plurals>
+    <!-- Pluralization for Number of Return Flights returned from a search TEMPLATE e.g. "25 Flights" -->
+    <plurals name="x_Return_Flights_TEMPLATE">
+        <item quantity="zero">%s voos de volta</item>
+        <item quantity="one">%s voo de volta</item>
+        <item quantity="two">%s voos de volta</item>
+        <item quantity="few">%s voos de volta</item>
+        <item quantity="many">%s voos de volta</item>
+        <item quantity="other">%s voos de volta</item>
+    </plurals>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Sua viagem está vazia.</string>
     <!-- Tablet Trip bucket, Book Flight button text -->
@@ -112,8 +123,10 @@
     <string name="loading_hotels_and_flights">Carregando hotéis e voos…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">Quando voar</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="flight_trends">Flutuação de tarifa</string>
     <!-- Flight fare calendar header for return flights -->
-    <string name="when_to_return">Quando voltar</string>
+    <string name="when_to_return">Quando retornar</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
     <string name="waypoint_suggestion_fail">Nenhuma informação de ponto de rota encontrada! Altere sua consulta e tente novamente.</string>
     <!-- Tablet search results, no hotels available -->
@@ -975,8 +988,6 @@
         <item quantity="many">%s dias</item>
         <item quantity="other">%s dias</item>
     </plurals>
-    <!-- Message shown to user when data has expired and we need to send them back to the start of the app -->
-    <string name="error_data_expired">DEBUG: os dados de pesquisa foram cancelados.  Informe DLew sobre este erro.</string>
     <!-- Select a flight to (city name) -->
     <string name="select_a_flight_to_TEMPLATE">Selecione um voo para %1$s</string>
     <!-- Select a flight back to (city name) -->
@@ -1829,13 +1840,13 @@
 
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
-    <string name="vip_access">VIP Access</string>
+    <string name="vip_access">+VIP Access</string>
     <!-- Message that explains the meaning of VIP Access -->
-    <string name="vip_access_message">Nos hotéis com VIP Access, os associados do Expedia Elite Plus recebem upgrade de quarto gratuito, além de outros benefícios que dependem da disponibilidade no momento do check-in.</string>
+    <string name="vip_access_message">Nos hotéis +VIP Access, associados +silver e +gold recebem upgrade de quarto grátis e outros extras, dependendo da disponibilidade no check-in.</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="filter_vip_access">Somente hotéis com VIP Access</string>
+    <string name="filter_vip_access">Somente hotéis +VIP Access</string>
     <!-- Filter for showing only VIP access hotels -->
-    <string name="VIP_Access_Only">Somente acesso VIP</string>
+    <string name="VIP_Access_Only">Somente +VIP Access</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">ON</string>
     <string name="switch_off">OFF</string>
